<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.carleton.COMP2601.LoginActivity">

    <TextView
        android:id="@+id/user_id_label"
        android:text="@string/id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />
    <EditText
        android:id="@+id/login_text"
        android:hint="@string/enter_employee_id_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_label"
        />

    <TextView
        android:id="@+id/password_label"
        android:text="@string/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        />
    <EditText
        android:id="@+id/password_text"
        android:hint="@string/enter_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/ip_label"
        android:text="@string/ip_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        />

    <EditText
        android:id="@+id/ip_text"
        android:hint="@string/enter_host_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ip_label"
        />

    <TextView
        android:id="@+id/port_label"
        android:text="@string/port_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ip_text"
        />

      <EditText
        android:id="@+id/port_text"
        android:hint="@string/enter_port_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@id/port_label"
        />

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/port_text"
        android:onClick="login"
        />


</RelativeLayout>

