<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.carleton.COMP2601.MainActivity">

    <TextView
        android:id="@+id/host_label"
        android:text="@string/ip_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_host"
        android:hint="@string/in_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/host_label"/>
    <TextView
        android:id="@+id/port_label"
        android:text="@string/port_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_host"/>
    <EditText
        android:id="@+id/edit_port"
        android:hint="@string/port_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/port_label"/>
    <TextView
        android:id="@+id/name_label"
        android:text="@string/id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_port"/>
    <EditText
        android:id="@+id/edit_name"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_label"/>
    <Button
        android:id="@+id/connect_button"
        android:text="@string/connect_btn_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:onClick="onClick"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/progressBar" />

    <!--<TextView-->
        <!--android:id="@+id/text1"-->
        <!--android:layout_marginEnd="@dimen/activity_vertical_margin"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
    <!--<TextView-->
        <!--android:id="@+id/text2"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_toEndOf="@+id/text1"-->
        <!--/>-->

    <!--<ListView-->
        <!--android:id="@+id/listView"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:divider="#b5b5b5"-->
        <!--android:dividerHeight="1dp"-->
        <!--android:listSelector="@drawable/list_selector"-->
        <!--android:text="@string/user_list_label"-->
        <!--android:layout_below="@+id/text2"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:headerDividersEnabled="true"-->
        <!--android:footerDividersEnabled="true"-->
        <!--android:layout_above="@+id/test_btn" />-->
    <!--<Button-->
        <!--android:id="@+id/test_btn"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="@string/start_text"-->
        <!--android:onClick="onClick"/>-->
</RelativeLayout>
